# Podcast-summary

./: .env.example  .gitattributes  .gitignore  AGENTS.md  Makefile  README.md  detail.md  report.md
.specify/: feature.json  init-options.json  (+1 more)
backend/: .ruff.toml  alembic.ini  mypy.ini  pyproject.toml  requirements-dev.txt
backend/src/podsum/: config.py  main.py
backend/src/podsum/api/: _logging.py  episodes.py  jobs.py  ws_progress.py
backend/src/podsum/domain/: chapter_segmenter.py  entity_extractor.py  prompt_assembler.py  quote_verifier.py  structured_parser.py  transcript_postprocess.py
backend/src/podsum/exporters/: json_export.py  markdown.py
backend/src/podsum/persistence/: models.py  repo.py
backend/src/podsum/persistence/migrations/: __init__.py  env.py  script.py.mako
backend/src/podsum/persistence/migrations/versions/: 0001_initial.py
backend/src/podsum/services/: _doubao_bigtts_protocol.py  asr_client.py  digest_script.py  ingest.py  job_queue.py  llm_client.py  pipeline.py  tts_client.py
backend/tests/integration/: test_audio_range.py  test_episode_detail.py  test_restart_recovery.py  test_us1_end_to_end.py  test_us1_resume.py  test_us2_quote_jump_math.py  test_us3_digest.py  test_us4_concurrency.py
backend/tests/unit/: test_asr_client.py  test_chapter_segmenter.py  test_entity_extractor.py  test_json_export_schema.py  test_json_exporter.py  test_llm_client.py  test_markdown_exporter.py  test_prompt_assembler.py  test_quote_verifier.py  test_structured_parser_us1.py  test_structured_parser_us2.py  test_transcript_postprocess.py
(+148 files in other folders)
