[build-system]
requires = ["setuptools>=80,<81", "wheel>=0.45,<0.46"]
build-backend = "setuptools.build_meta"

[project]
name = "podsum"
version = "0.1.0"
description = "Local podcast summary web application backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.136,<0.137",
  "uvicorn[standard]>=0.38,<0.39",
  "sqlalchemy>=2.0,<2.1",
  "alembic>=1.17,<1.18",
  "pydantic>=2.12,<2.13",
  "pydantic-settings>=2.14,<2.15",
  "httpx>=0.28,<0.29",
  "tenacity>=9.1,<9.2",
  "yt-dlp>=2026.3,<2026.4",
  "openai>=2.35,<2.36",
  "volcengine-python-sdk>=5.0,<5.1",
  "dashscope>=1.25,<1.26",
  "python-multipart>=0.0,<0.1",
  "python-ulid>=3.1,<3.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]
